--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
   "dependencies": {
     "copy-webpack-plugin": "^4.3.1",
     "cross-env": "^5.1.1",
+    "date-fns": "^1.29.0",
     "express": "^4.16.2",
     "opn": "^5.1.0",
+    "polished": "^1.9.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.6",
