--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "lint": "./node_modules/.bin/eslint -- ."
   },
   "dependencies": {
+    "axios": "^0.17.1",
     "copy-webpack-plugin": "^4.3.1",
     "cross-env": "^5.1.1",
     "date-fns": "^1.29.0",
@@ -29,6 +30,7 @@
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
     "redux": "^3.7.2",
+    "redux-actions": "^2.2.1",
     "redux-saga": "^0.16.0",
     "reselect": "^3.0.1",
     "styled-components": "^2.2.4",
